# agentkobi

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  briefing_agent.py  customer_agent.py  llm_provider.py  order_agent.py  shipping_agent.py  stock_agent.py  supplier_agent.py
backend/app/api/: routes.py
backend/app/core/: celery.py  config.py  db.py  email.py  telegram.py
backend/app/db/: critical_stock.csv  customers.csv  loader.py  order_items.csv  orders.csv  orders_full.csv  products.csv  supplier_drafts.csv  supplier_drafts_full.csv
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 2eede5c3e3e3_initial_schema.py
backend/app/db/seed/: seed_from_csv.py
backend/app/graph/: nodes.py  orchestrator.py  routing.py  state.py
backend/app/models/: base.py  orm.py  tools.py
backend/app/rag/: embeddings.py  faiss_store.py  ingest.py  retriever.py
backend/app/rag/data/faiss_index/: index.faiss  index.pkl
backend/app/schemas/: api.py
backend/app/tasks/: briefing_task.py
backend/app/validators/: briefing_validator.py  fallback.py  number_extractor.py
docs/: ESMA_TEKNIK_NOTLAR.md  POSTGRES_MIGRATION.md
frontend/: Dockerfile  api.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BriefingPanel.tsx  Charts.tsx  CriticalStockAlert.tsx  LayoutShell.tsx  OrdersFilter.tsx  Sidebar.tsx  StatsCard.tsx  StatusBadge.tsx
scripts/: smoke_test.sh
(+5 files in other folders)
