[project]
name = "agentkobi-backend"
version = "0.1.0"
description = "AgentKobi backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "celery[redis]>=5.4",
  "redis>=5.0",
  "httpx>=0.27",
  "langchain>=0.3",
  "langchain-community>=0.3",
  "langchain-google-genai>=2.0",
  "langchain-groq>=0.2",
  "langchain-huggingface>=0.1",
  "langgraph>=0.2",
  "sentence-transformers>=3.0",
  "faiss-cpu>=1.8",
  "python-dotenv>=1.0",
  "tenacity>=9.0",
  "pandas>=2.2",
  "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"